home-automation/vwsfriend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vwsfriend
  labels:
    app: vwsfriend
    app.kubernetes.io/name: vwsfriend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: vwsfriend
  template:
    metadata:
      labels:
        app: vwsfriend
        app.kubernetes.io/name: vwsfriend
    spec:
      containers:
        - name: vwsfriend
          image: tillsteinbach/vwsfriend:0.23.11
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: http
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 3
            failureThreshold: 1
          ports:
            - containerPort: 4000
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: vwsfriend-config
