home-automation/vwsfriend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vwsfriend
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: vwsfriend
